<resources>
    <string name="app_name">NetPlay</string>

    <!--OneSignal App id-->
    <string name="ONESIGNAL_APP_ID">66fd6f84-6a3b-4b65-b902-a32bf63b005a</string>

    <!-- ADMOB DETAILS-->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id" translatable="false">248265212950291</string>

    <string name="inter_ads" translatable="false">both</string>
    <string name="banner_ads" translatable="false">fb</string>

    <string name="gbanner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ginters_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="gnative_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <string name="fbbanner_id" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="fbinters_id" translatable="false">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>

    <!--Setting -->

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->


    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://dbugstation.com/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://dbugstation.com/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://dbugstation.com/</string>
    <string name="title_version">Version</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="test_title"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="recent_title">Recent</string>
    <string name="settings">Settings</string>
    <string name="details_title">Details</string>
    <string name="description">Description</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START NOW</string>

    <string name="details">Category </string>
    <string name="recent">Recent videos </string>
    <string name="view_all">Show all </string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_msg">Dark mode on or off</string>
    <string name="list_or_grid">List or Grid</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>

    <!--connection-->
    <string name="dialog_connection_title">Servers unreachable</string>
    <string name="dialog_connection_description">We can not connect with our APIs.\n\nPlease ensure that you have set up your API keys and parameters as documented!</string>
    <string name="dialog_internet_title">No internet</string>
    <string name="dialog_internet_description">You seem to have no internet connection, this app requires internet to load the content.</string>
    <string name="no_network">Failed to Connect Network!</string>
    <string name="ok">OK</string>

    <!-- media viewer and singleradio-->
    <string name="volume_low">Turn your volume up!</string>
    <string name="now_playing">Now Playing</string>
    <string name="notification_playing">Now Playing</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="audio_notification">Background media playback</string>
    <string name="error_retry">Failed to connect to stream&#8230;</string>
    <string name="error_retry_later">Please try again in a few seconds&#8230;</string>
    <string name="radio_playing_other">Already playing another station. Press play again to play this station instead.</string>
    <string name="empty_textview">Error loading data</string>

    <!--sleeping timer-->
    <string name="sleep_time">Sleeping Time</string>
    <string name="min">Minutes</string>
    <string name="set">Set</string>
    <string name="stop">Stop</string>

</resources>