<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/pref_title_notifications"
        >

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/pref_header_about">

        <Preference
            app:iconSpaceReserved="false"
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            app:iconSpaceReserved="false"
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <!-- preference opens url in browser -->
        <Preference
            app:iconSpaceReserved="false"
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference
            app:iconSpaceReserved="false"
            android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference app:iconSpaceReserved="false"
            android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>