<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/create_folder_bg"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="20dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_time"
            android:textSize="20sp"
            android:textStyle="normal"
            android:fontFamily="@font/satoshi_bold"
            android:letterSpacing=".02"
            android:textColor="@color/white"/>
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/txt_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/satoshi_regular"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/lin_ok"
                android:layout_marginStart="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set"
                    android:textColor="@color/color_primary"
                    android:textSize="16sp"
                    android:fontFamily="@font/satoshi_medium"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_cancel"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/lin_ok"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="#CFD6FF"
                    android:textSize="16sp"
                    android:fontFamily="@font/satoshi_medium"
                    android:textStyle="normal"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>